--- a/templates/views/index.hbs
+++ b/templates/views/index.hbs
@@ -1,7 +1,7 @@
 {{>header}}
 
 <body>
-    <nav class="#40c4ff red">
+    <nav class="#40c4ff light-blue accent-2">
         <div class="container">
             <div class="nav-wrapper">
                 <a href="#!" class="brand-logo">Notes App</a>
