--- a/public/css/style.css
+++ b/public/css/style.css
@@ -8,13 +8,16 @@
   right: 0;
 }
 
+.collapsible .collapsible-body span {
+  word-break: break-all;
+}
+
 .note-title {
   margin-left: 30px;
 }
 
 .cc {
   position: relative;
-  /* left: 20px; */
   cursor: pointer;
   color: #40c4ff;
   pointer-events: visible;
@@ -59,13 +62,13 @@ footer {
   font-family: "Roboto", sans-serif;
 }
 
-.collapsible-header > .caret {
+/* .collapsible-header > .caret {
   transition: transform 0.2s ease;
 }
 
 .active > .collapsible-header > .caret {
   transform: rotate(180deg);
-}
+} */
 
 #toast {
   position: fixed;
