--- a/templates/views/index.hbs
+++ b/templates/views/index.hbs
@@ -26,12 +26,13 @@
             <h4 class="title center-align">Notes App using NODE JS</h4>
 
             <div class="input-field m6 offset-m3 col s12 center">
-                <input type="text" id="noteTitle" data-length="20" maxlength="20">
+                <textarea type="text" class="materialize-textarea" id="noteTitle" data-length="20"
+                    maxlength="20"></textarea>
                 <label for="noteTitle">Note Title</label>
             </div>
 
             <div class="input-field m6 offset-m3 col s12 center mt">
-                <textarea class="materialize-textarea" type="text" id="noteBody" data-length="300"
+                <textarea type="text" class="materialize-textarea" id="noteBody" data-length="300"
                     maxlength="300"></textarea>
                 <label for="noteBody">Note Body</label>
             </div>
