--- a/templates/views/index.hbs
+++ b/templates/views/index.hbs
@@ -26,14 +26,13 @@
             <h4 class="title center-align">Notes App using NODE JS</h4>
 
             <div class="input-field m6 offset-m3 col s12 center">
-                <textarea type="text" class="materialize-textarea" id="noteTitle" data-length="20"
-                    maxlength="20"></textarea>
+                <input type="text" id="noteTitle" data-length="20" maxlength="20">
                 <label for="noteTitle">Note Title</label>
             </div>
 
             <div class="input-field m6 offset-m3 col s12 center mt">
-                <textarea type="text" class="materialize-textarea" id="noteBody" data-length="30"
-                    maxlength="30"></textarea>
+                <textarea type="text" class="materialize-textarea" id="noteBody" data-length="300"
+                    maxlength="300"></textarea>
                 <label for="noteBody">Note Body</label>
             </div>
 
